--- a/XMLGeneratorLambda/package.json
+++ b/XMLGeneratorLambda/package.json
@@ -14,6 +14,7 @@
     "csvtojson": "^2.0.10",
     "js2xmlparser": "^4.0.0",
     "jsontoxml": "^1.0.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26"
   }
 }
